force-app/main/default/objects/Product_Payments__c/fields/Payment_Provided_Agency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Provided_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Placement agency associated with Payment</description>
    <inlineHelpText>Placement agency associated with Payment</inlineHelpText>
    <label>Commission Paid To</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Product Payments</relationshipLabel>
    <relationshipName>Product_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>