force-app/main/default/objects/Product_Payments__c/fields/Payment_Provided_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Provided_Agency_Name__c</fullName>
    <description>Commission Paid To Agency Name</description>
    <formula>Payment_Provided_Agency__r.Agency_Name__c</formula>
    <inlineHelpText>Commission Paid To Agency Name</inlineHelpText>
    <label>Commission Paid To Agency Name</label>
    <type>Text</type>
</CustomField>