force-app/main/default/objects/Product_Payments__c/fields/Payment_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Source__c</fullName>
    <description>Payment Source</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>1 OR 2 OR 3
1 - Placement,
2 - CFG,
3 - Seller,</inlineHelpText>
    <label>Payment Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>