force-app/main/default/objects/Product_Payments__c/fields/Payment_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Source_Description__c</fullName>
    <description>Payment Source Description</description>
    <formula>CASE( Payment_Source__c , &apos;1&apos;, &apos;Agency&apos;, 
&apos;2&apos;, &apos;Direct Payment by CFG&apos;,
&apos;3&apos;, &apos;Direct Payment by Seller&apos;,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment Source Description</inlineHelpText>
    <label>Payment Source Description</label>
    <type>Text</type>
</CustomField>