force-app/main/default/objects/Product_Payments__c/fields/Payment_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Unique_ID__c</fullName>
    <description>Payment ID mapped in Portal ADF for unique identifying Payment ID. displays based on debtnext id and autogenerated id in SF</description>
    <formula>IF( ISBLANK(Transaction_History__c) ,  Payment_Unique_Name__c , Transaction_History__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment ID mapped in Portal ADF for unique identifying Payment ID. displays based on debtnext id and autogenerated id in SF</inlineHelpText>
    <label>Payment Unique ID</label>
    <type>Text</type>
</CustomField>