force-app/main/default/objects/Product_Payments__c/fields/Payment_Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Unique_Name__c</fullName>
    <description>Payment Unique Name autogenerated for Portal ADF mapping</description>
    <displayFormat>{0000000}</displayFormat>
    <inlineHelpText>Payment Unique Name autogenerated for Portal ADF mapping</inlineHelpText>
    <label>Payment Unique Name</label>
    <type>AutoNumber</type>
</CustomField>