force-app/main/default/objects/Product_Payments__c/fields/Payment_Update_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Payment_Update_Reconciliation__c</fullName>
    <description>This field is used for commission statement functionality</description>
    <formula>IF(Payment_Source__c &lt;&gt; &apos;2&apos; &amp;&amp; Payment_Source__c &lt;&gt; &apos;3&apos;,Pay_Due__c,null)</formula>
    <inlineHelpText>This field is used for commission statement functionality</inlineHelpText>
    <label>Payment Update Reconciliation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>