force-app/main/default/objects/Product_Payments__c/fields/Placement_History__c.field-meta.xml
<CustomField>
    <fullName>Placement_History__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement History</label>
    <referenceTo>Placement_History__c</referenceTo>
    <relationshipLabel>Product Payments</relationshipLabel>
    <relationshipName>Product_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>