force-app/main/default/objects/Product_Payments__c/fields/Placement_History_External__c.field-meta.xml
<CustomField>
    <fullName>Placement_History_External__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Placement History External</label>
    <length>18</length>
    <type>Text</type>
</CustomField>