force-app/main/default/objects/Product_Payments__c/fields/Placement_Status_Code_on_Product__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status_Code_on_Product__c</fullName>
    <description>Placement Status Code on Product at the Time of Payment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Status Code on Product at the Time of Payment</inlineHelpText>
    <label>Placement Status Code on Product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>