force-app/main/default/objects/Product_Payments__c/fields/Placement_Status_on_Product__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status_on_Product__c</fullName>
    <description>Placement Status Picklist on Product at time of payment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Status Picklist on Product</inlineHelpText>
    <label>Placement Status on Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>