force-app/main/default/objects/Product_Payments__c/fields/Placement_Sub_Status_on_Product__c.field-meta.xml
<CustomField>
    <fullName>Placement_Sub_Status_on_Product__c</fullName>
    <description>Placement Sub Status on Product at the Time of Payment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Sub Status on Product at the Time of Payment</inlineHelpText>
    <label>Placement Sub Status on Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>