force-app/main/default/objects/Product_Payments__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <description>Pool from Product</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pool from Product</inlineHelpText>
    <label>Pool</label>
    <length>20</length>
    <type>Text</type>
</CustomField>