force-app/main/default/objects/Product_Payments__c/fields/Pool_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Pool_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pool at the time of Payment</description>
    <inlineHelpText>Pool at the time of Payment</inlineHelpText>
    <label>Pool</label>
    <referenceTo>Pool__c</referenceTo>
    <relationshipLabel>Product Payments</relationshipLabel>
    <relationshipName>Product_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>