force-app/main/default/objects/Product_Payments__c/fields/Pool_Name__c.field-meta.xml
<CustomField>
    <fullName>Pool_Name__c</fullName>
    <description>Pool ID for ADF job purpose</description>
    <formula>Pool_Lookup__r.Pool_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pool ID for ADF job purpose</inlineHelpText>
    <label>Pool Name</label>
    <type>Text</type>
</CustomField>