force-app/main/default/objects/Product_Payments__c/fields/Post_Pay_Interest__c.field-meta.xml
<CustomField>
    <fullName>Post_Pay_Interest__c</fullName>
    <description>Post_Pay_Interest__c</description>
    <inlineHelpText>Post_Pay_Interest__c</inlineHelpText>
    <label>Post Pay Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>