force-app/main/default/objects/Product_Payments__c/fields/Post_Pay_Principal__c.field-meta.xml
<CustomField>
    <fullName>Post_Pay_Principal__c</fullName>
    <description>Post_Pay_Principal</description>
    <inlineHelpText>Post_Pay_Principal</inlineHelpText>
    <label>Post_Pay_Principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>