force-app/main/default/objects/Product_Payments__c/fields/Pre_Pay_Principal__c.field-meta.xml
<CustomField>
    <fullName>Pre_Pay_Principal__c</fullName>
    <label>Pre Pay Principal</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>