force-app/main/default/objects/Product_Payments__c/fields/Principal_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Principal_Payment_Amount__c</fullName>
    <description>Principal Payment Amount paid or reversed on Account from Payment Amount</description>
    <inlineHelpText>Principal Payment Amount paid or reversed on Account from Payment Amount</inlineHelpText>
    <label>Principal Payment Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>