force-app/main/default/objects/Product_Payments__c/fields/Product_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Agency_Name__c</fullName>
    <description>Product Agency Name</description>
    <formula>Product_Agency__r.Agency_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Agency Name</inlineHelpText>
    <label>Product Agency Name</label>
    <type>Text</type>
</CustomField>