force-app/main/default/objects/Product_Payments__c/fields/Product_Collection_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Product_Collection_Sub_Status__c</fullName>
    <description>Collection Sub Status on Product at the Time of Payment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Collection Sub Status on Product at the Time of Payment</inlineHelpText>
    <label>Product Collection Sub Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>