force-app/main/default/objects/Product_Payments__c/fields/Product_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Product_Commission_Rate__c</fullName>
    <description>Commission Rate on Product at the time of Payment</description>
    <inlineHelpText>Commission Rate on Product at the time of Payment</inlineHelpText>
    <label>Product Commission Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>