force-app/main/default/objects/Product_Payments__c/fields/Product_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Product_Identifier__c</fullName>
    <formula>CCS_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_Identifier</label>
    <type>Text</type>
</CustomField>