force-app/main/default/objects/Product_Payments__c/fields/Product_Status_Desc_on_Product__c.field-meta.xml
<CustomField>
    <fullName>Product_Status_Desc_on_Product__c</fullName>
    <description>Product Status Desc on Product at time of payment. for backend purpose</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product Status Desc on Product at time of payment. for backend purpose</inlineHelpText>
    <label>Product Status Desc on Product</label>
    <length>100</length>
    <type>Text</type>
</CustomField>