force-app/main/default/objects/Product_Payments__c/fields/Purchase_ID__c.field-meta.xml
<CustomField>
    <fullName>Purchase_ID__c</fullName>
    <formula>CCS_Account__r.Portfolio_Name_Lookup__r.Purchase_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>