force-app/main/default/objects/Product_Payments__c/fields/Remitted_Back_To__c.field-meta.xml
<CustomField>
    <fullName>Remitted_Back_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Remitted Back To</description>
    <inlineHelpText>Remitted Back To</inlineHelpText>
    <label>Remitted Back To</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8</booleanFilter>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Scotia</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>MBNA</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>SDA</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Trustee Company</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Scotia Dealer Advantage</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Tangerine</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Auto Capital</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>Progressa</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Payments</relationshipLabel>
    <relationshipName>Product_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>