force-app/main/default/objects/Product_Payments__c/fields/Remitted_Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Remitted_Cheque_Number__c</fullName>
    <description>Remitted Cheque Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Remitted Cheque Number</inlineHelpText>
    <label>Remitted Cheque Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>