force-app/main/default/objects/Product_Payments__c/fields/Remitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Remitted_Date__c</fullName>
    <description>Remitted Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Remitted Date</inlineHelpText>
    <label>Remitted Date</label>
    <type>Date</type>
</CustomField>