force-app/main/default/objects/Product_Payments__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <description>Tax Amount calculated based on Province and Tax Rate</description>
    <inlineHelpText>Tax Amount calculated based on Province and Tax Rate</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>