force-app/main/default/objects/Product_Payments__c/fields/Tax_Province__c.field-meta.xml
<CustomField>
    <fullName>Tax_Province__c</fullName>
    <description>Used for calculation of Tax amount based on which Province</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used for calculation of Tax amount based on which Province</inlineHelpText>
    <label>Tax Province</label>
    <length>20</length>
    <type>Text</type>
</CustomField>