force-app/main/default/objects/Product_Payments__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <description>to display what is the Tax Rate and Tax Type</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>