force-app/main/default/objects/Product_Payments__c/fields/Transaction_History__c.field-meta.xml
<CustomField>
    <fullName>Transaction_History__c</fullName>
    <description>Transaction history tracker</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Transaction history tracker</inlineHelpText>
    <label>Transaction History</label>
    <length>100</length>
    <type>Text</type>
</CustomField>