force-app/main/default/objects/Product_Payments__c/fields/Unallocated_Payment__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to unallocated payment reocord</description>
    <inlineHelpText>Link to unallocated payment reocord</inlineHelpText>
    <label>Unallocated Payment</label>
    <referenceTo>Unallocated_Payment__c</referenceTo>
    <relationshipLabel>Product Payments</relationshipLabel>
    <relationshipName>Product_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>