force-app/main/default/objects/Product_Payments__c/fields/Updated_Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Updated_Current_Balance__c</fullName>
    <formula>CCS_Account__r.Current_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Updated Current Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>