force-app/main/default/objects/Product_Payments__c/fields/Value_Tier_at_Time_of_Placement__c.field-meta.xml
<CustomField>
    <fullName>Value_Tier_at_Time_of_Placement__c</fullName>
    <description>Value Tier at Time of Placement</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value Tier at Time of Placement</inlineHelpText>
    <label>Value Tier at Time of Placement</label>
    <length>2</length>
    <type>Text</type>
</CustomField>