force-app/main/default/objects/Product_Payments__c/recordTypes/Balance_Adjustments.recordType-meta.xml
<RecordType>
    <fullName>Balance_Adjustments</fullName>
    <active>true</active>
    <description>Balance adjustments for Products</description>
    <label>Balance Adjustments</label>
</RecordType>