force-app/main/default/objects/Product_Payments__c/recordTypes/CCS_Dividend_Payment.recordType-meta.xml
<RecordType>
    <fullName>CCS_Dividend_Payment</fullName>
    <active>true</active>
    <description>Payments created by payment processing for CCS</description>
    <label>CCS Dividend Payment</label>
</RecordType>