force-app/main/default/objects/Product_Payments__c/recordTypes/CCS_Product_Payment.recordType-meta.xml
<RecordType>
    <fullName>CCS_Product_Payment</fullName>
    <active>true</active>
    <description>Payments inserted manually or by data load</description>
    <label>CCS Product Payment</label>
</RecordType>