force-app/main/default/objects/Product_Payments__c/recordTypes/Distressed_Product_Payment.recordType-meta.xml
<RecordType>
    <fullName>Distressed_Product_Payment</fullName>
    <active>true</active>
    <label>Distressed Product Payment</label>
</RecordType>