force-app/main/default/objects/Product_Payments__c/validationRules/Memo_Not_Editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Memo_Not_Editable</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISCHANGED(Memo__c) ,NOT(ISNEW()))</errorConditionFormula>
    <errorDisplayField>Memo__c</errorDisplayField>
    <errorMessage>Memo details cannot be modified</errorMessage>
</ValidationRule>