force-app/main/default/objects/Product_Payments__c/validationRules/Payment_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_not_editable</fullName>
    <active>true</active>
    <description>Payment not editable if Deposit Slip is already generated</description>
    <errorConditionFormula>AND($User.LastName &lt;&gt; $Label.DataArchiverUser,If( ISNEW(), (AND(OR(ISNULL( CreatedDate ),ISBLANK(CreatedDate )),AND( $Setup.Application_Config_Settings__c.Do_Not_Run_Payment_Validation__c = False,
OR(
AND(Deposit_Slip__c != null,
NOT(ISCHANGED( Is_Payment_Remitted__c )),
NOT(ISCHANGED( Remitted_Date__c )),
NOT(ISCHANGED( Remitted_Cheque_Number__c )),
NOT(ISCHANGED( Remitted_Date__c )),
NOT(ISCHANGED( Payment_Reversed__c ))
)
)
))),
(AND( $Setup.Application_Config_Settings__c.Do_Not_Run_Payment_Validation__c = False,
OR(
AND(Deposit_Slip__c != null,
NOT(ISCHANGED( Is_Payment_Remitted__c )),
NOT(ISCHANGED( Remitted_Date__c )),
NOT(ISCHANGED( Remitted_Cheque_Number__c )),
NOT(ISCHANGED( Remitted_Date__c )),
NOT(ISCHANGED( Payment_Reversed__c ))
)
)
))))</errorConditionFormula>
    <errorDisplayField>Balance_After_Payment__c</errorDisplayField>
    <errorMessage>Payment not editable as Deposit Slip is already generated</errorMessage>
</ValidationRule>