force-app/main/default/objects/Product_Payments__c/validationRules/Payment_Reversed.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Reversed</fullName>
    <active>true</active>
    <description>Once Payment is Reversed do not allow payment to be updated</description>
    <errorConditionFormula>AND(
ISCHANGED( Payment_Reversed__c ),
OR(
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;NSF&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Stopped&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Unauthorised&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Stale Dated&quot;),
ISPICKVAL(PRIORVALUE(Payment_Reversed__c) , &quot;Payment posted to Incorrect account&quot;)))</errorConditionFormula>
    <errorMessage>Once the Payment is reversed, it cannot be updated</errorMessage>
</ValidationRule>