force-app/main/default/objects/Product_Payments__c/validationRules/Remitted_Payment_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Remitted_Payment_Required_Fields</fullName>
    <active>true</active>
    <description>Once payment is remitted, Remitted date, remitted cheque number and remitted to values should be populated</description>
    <errorConditionFormula>AND($User.LastName &lt;&gt; $Label.DataArchiverUser,If( ISNEW(), (AND(OR(ISNULL( CreatedDate ),ISBLANK(CreatedDate )),
OR(
AND(
Is_Payment_Remitted__c = True,
OR(
ISBLANK(Remitted_Cheque_Number__c),
ISBLANK(Remitted_Back_To__c),
ISBLANK(Remitted_Date__c))),
AND(
Is_Payment_Remitted__c = False,
OR(
NOT(ISBLANK(Remitted_Cheque_Number__c )),
NOT(ISBLANK(Remitted_Back_To__c)),
NOT(ISBLANK(Remitted_Date__c ))
))
))),
(OR(
AND(
Is_Payment_Remitted__c = True,
OR(
ISBLANK(Remitted_Cheque_Number__c),
ISBLANK(Remitted_Back_To__c),
ISBLANK(Remitted_Date__c))),
AND(
Is_Payment_Remitted__c = False,
OR(
NOT(ISBLANK(Remitted_Cheque_Number__c )),
NOT(ISBLANK(Remitted_Back_To__c)),
NOT(ISBLANK(Remitted_Date__c ))
))
))))</errorConditionFormula>
    <errorMessage>Mandatory Remittance fields are incomplete</errorMessage>
</ValidationRule>