force-app/main/default/objects/Product_Payments__c/validationRules/Restrict_User_To_Update_FairshareAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_User_To_Update_FairshareAmount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISCHANGED( FairShare_Amount__c   ),

NOT ISBLANK(PRIORVALUE( FairShare_Amount__c ))

)</errorConditionFormula>
    <errorMessage>FairShare Amount Cannot Be Modified</errorMessage>
</ValidationRule>