force-app/main/default/objects/Product_Payments__c/validationRules/Restrict_User_To_Update_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_User_To_Update_Payment</fullName>
    <active>true</active>
    <description>Restrict_User_To_Update_Payment</description>
    <errorConditionFormula>AND(

   ISCHANGED( Payment_Amount__c ),

   NOT ISBLANK(PRIORVALUE( Payment_Amount__c ))

)</errorConditionFormula>
    <errorDisplayField>Balance_After_Payment__c</errorDisplayField>
    <errorMessage>Payment Amount Can Not Be Modified</errorMessage>
</ValidationRule>