force-app/main/default/objects/Product_Payments__c/listViews/All_Distressed_Product_Payments.listView-meta.xml
<ListView>
    <fullName>All_Distressed_Product_Payments</fullName>
    <columns>Original_Of_Payment_Reversal__c</columns>
    <columns>NAME</columns>
    <columns>CCS_Account__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Agency__c</columns>
    <columns>Payment_Source__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Payment_Posting_Date__c</columns>
    <columns>Payment_Created_Date__c</columns>
    <columns>Agency_Calculated_Comm__c</columns>
    <columns>Pay_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Payments__c.Distressed_Product_Payment</value>
    </filters>
    <label>All Distressed Product Payments</label>
    <sharedTo>
        <group>ICT_Group</group>
        <group>LRT_Group</group>
    </sharedTo>
</ListView>