force-app/main/default/objects/Product_Payments__c/listViews/EFT_Product_Payments.listView-meta.xml
<ListView>
    <fullName>EFT_Product_Payments</fullName>
    <columns>NAME</columns>
    <columns>CCS_Account__c</columns>
    <columns>Cheque_Number__c</columns>
    <columns>FairShare_Amount__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Payment_Posting_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Created_by_EFT_Processing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>EFT Product Payments</label>
</ListView>